--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -6,5 +6,9 @@
   "preferences_dark_mode": "Ativar Modo Escuro",
   "teste" : "em portugues",
   "dashboard_title": "Dashboard",
-  "dashboard_web_title": "WEB -> em portugues"
+  "dashboard_web_title": "WEB -> em portugues",
+  "bemvindo" : "welcome",
+  "login" : "login",
+  "senha" : "password",
+  "entrar" : "entrar"
 }
