ajustes nos arquivos. ainda quebrando

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,4 +1,5 @@
 {
+  "@@locale": "pt",
   "hello": "¡Hola!",
   "welcome": "Bienvenido a nuestra aplicación",
   "preferences_title": "Preferencias",
