--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,13 +1,13 @@
 {
   "@@locale": "es",
-  "hello": "Olá!",
-  "welcome": "Bem-vindo ao nosso app",
-  "preferences_title": "Preferências",
-  "preferences_language": "Selecionar Idioma",
-  "preferences_dark_mode": "Ativar Modo Escuro",
-  "teste" : "em portugues",
+  "hello": "¡Hola!",
+  "welcome": "Bienvenido a nuestra aplicación",
+  "preferences_title": "Preferencias",
+  "preferences_language": "Seleccionar Idioma",
+  "preferences_dark_mode": "Activar Modo Oscuro",
+  "teste" : "em espanhol",
   "dashboard_title": "Dashboard",
-  "dashboard_web_title": "WEB -> em portugues",
+  "dashboard_web_title": "WEB -> em espanhol",
   "bemvindo" : "welcome",
   "login" : "login",
   "senha" : "password",
